--- a/pom.xml
+++ b/pom.xml
@@ -7,15 +7,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>com.github.davidmoten</groupId>
+        <artifactId>sonatype-parent</artifactId>
+        <version>0.1</version>
+    </parent>
 
-    <groupId>net.nullschool</groupId>
     <artifactId>grib2json</artifactId>
     <version>0.8.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>grib2json</name>
     <description>GRIB to JSON converter</description>
-    <url>https://github.com/cambecc/grib2json</url>
+    <url>https://github.com/davidmoten/grib2json</url>
     <inceptionYear>2013</inceptionYear>
 
     <licenses>
@@ -30,14 +34,14 @@
         <developer>
             <id>cambecc</id>
             <name>Cameron Beccario</name>
-            <email>cambecc@nullschool.net</email>
+            <email>davidmoten@nullschool.net</email>
         </developer>
     </developers>
 
     <scm>
-        <connection>scm:git:git@github.com:cambecc/grib2json.git</connection>
-        <developerConnection>scm:git:git@github.com:cambecc/grib2json.git</developerConnection>
-        <url>https://github.com/cambecc/grib2json.git</url>
+        <connection>scm:git:git@github.com:davidmoten/grib2json.git</connection>
+        <developerConnection>scm:git:git@github.com:davidmoten/grib2json.git</developerConnection>
+        <url>https://github.com/davidmoten/grib2json.git</url>
         <tag>HEAD</tag>
     </scm>
 
