--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-  ~~ grib2json Project definition
-  ~~
-  ~~ @author Cameron Beccario
-  -->
+<!-- ~~ grib2json Project definition ~~ ~~ @author Cameron Beccario -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.github.davidmoten</groupId>
@@ -67,17 +63,20 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.0.9</version>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
             <version>2.3</version>
         </dependency>
+
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>javax.json</artifactId>
             <version>1.0.3</version>
         </dependency>
+        
         <dependency>
             <groupId>com.lexicalscope.jewelcli</groupId>
             <artifactId>jewelcli</artifactId>
@@ -139,7 +138,8 @@
                     </descriptors>
                     <finalName>grib2json-${project.version}</finalName>
                     <appendAssemblyId>false</appendAssemblyId>
-                    <!--<attach>false</attach> &lt;!&ndash; skip assembly deploy &ndash;&gt;-->
+                    <!--<attach>false</attach> &lt;!&ndash; skip assembly 
+                        deploy &ndash;&gt; -->
                 </configuration>
                 <executions>
                     <execution>
