--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- ~~ grib2json Project definition ~~ ~~ @author Cameron Beccario -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.github.davidmoten</groupId>
@@ -10,7 +9,7 @@
     </parent>
 
     <artifactId>grib2json</artifactId>
-    <version>0.8.0-SNAPSHOT</version>
+    <version>0.8.0.1</version>
     <packaging>jar</packaging>
 
     <name>grib2json</name>
@@ -30,7 +29,7 @@
         <connection>scm:git:git@github.com:davidmoten/grib2json.git</connection>
         <developerConnection>scm:git:git@github.com:davidmoten/grib2json.git</developerConnection>
         <url>https://github.com/davidmoten/grib2json.git</url>
-        <tag>HEAD</tag>
+        <tag>0.8.0.1</tag>
     </scm>
 
     <properties>
