--- a/pom.xml
+++ b/pom.xml
@@ -9,12 +9,13 @@
     </parent>
 
     <artifactId>grib2json</artifactId>
-    <version>0.8.0.1</version>
+    <version>0.8.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>grib2json</name>
     <description>GRIB to JSON converter - forked by Dave Moten</description>
     <url>https://github.com/davidmoten/grib2json</url>
+
     <inceptionYear>2013</inceptionYear>
 
     <licenses>
@@ -26,14 +27,15 @@
     </licenses>
 
     <scm>
-        <connection>scm:git:git@github.com:davidmoten/grib2json.git</connection>
-        <developerConnection>scm:git:git@github.com:davidmoten/grib2json.git</developerConnection>
-        <url>https://github.com/davidmoten/grib2json.git</url>
-        <tag>0.8.0.1</tag>
+        <connection>${scm.url}</connection>
+        <developerConnection>${scm.url}</developerConnection>
+        <url>${scm.url}</url>
+        <tag>HEAD</tag>
     </scm>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <scm.url>scm:git:https://github.com/davidmoten/grib2json.git</scm.url>
     </properties>
 
     <repositories>
