--- a/pom.xml
+++ b/pom.xml
@@ -69,13 +69,13 @@
             <artifactId>javax.json</artifactId>
             <version>1.1.4</version>
         </dependency>
-        
+
         <dependency>
             <groupId>com.lexicalscope.jewelcli</groupId>
             <artifactId>jewelcli</artifactId>
             <version>0.8.9</version>
         </dependency>
-        
+
         <dependency>
             <groupId>edu.ucar</groupId>
             <artifactId>grib</artifactId>
@@ -145,7 +145,25 @@
                     </execution>
                 </executions>
             </plugin>
-
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.8</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
