--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,6 @@
 
     <build>
         <plugins>
-            <!-- Compile with Java 7. -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -164,6 +163,18 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.felix</groupId>
+                <artifactId>maven-bundle-plugin</artifactId>
+                <version>5.1.8</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <obrRepository>NONE</obrRepository>
+                    <instructions>
+                    </instructions>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
