--- a/pom.xml
+++ b/pom.xml
@@ -38,14 +38,6 @@
         <scm.url>scm:git:https://github.com/davidmoten/grib2json.git</scm.url>
     </properties>
 
-    <repositories>
-        <repository>
-            <id>unidata</id>
-            <name>THREDDS</name>
-            <url>https://artifacts.unidata.ucar.edu/content/repositories/unidata-releases/</url>
-        </repository>
-    </repositories>
-
     <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -170,12 +162,19 @@
                 <extensions>true</extensions>
                 <configuration>
                     <obrRepository>NONE</obrRepository>
-                    <instructions>
-                    </instructions>
+                    <instructions></instructions>
                 </configuration>
             </plugin>
 
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>unidata</id>
+            <name>THREDDS</name>
+            <url>https://artifacts.unidata.ucar.edu/content/repositories/unidata-releases/</url>
+        </repository>
+    </repositories>
 
 </project>
